# Genesis-Engine

./: .gitignore  CLAUDE.md  README.md  genesis.yaml  project_dev_log.md  pyproject.toml  requirements.txt  skills-lock.json
docs/: architecture.md  rag-strategy.md  roadmap.md
genesis_engine/: __init__.py  agent.py  ask_workflow.py  business_workflow.py  cli.py  config.py  project_journal.py  rag.py  skill_workflow.py  stack_workflow.py
knowledge/business/: README.md  genesis-vision.md
knowledge/dev/: README.md  architecture.md  rag-strategy.md  roadmap.md
knowledge/infra/: README.md
scripts/: add_skill.py  seed_rag.py
